<resources>
    <string name="app_name">AxeDroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="host">Host:</string>
    <string name="hashrate_cur_exp">HashRate Cur/Exp:</string>
    <string name="shares_a_r">Shares A/R:</string>
    <string name="split">/</string>
    <string name="bestdiff_all_ses">BestDiff All/Ses:</string>
    <string name="power">Power:</string>
    <string name="watt">W</string>
    <string name="temp_asic_vr">Temp Asic/VR:</string>
    <string name="fan_rpm">Fan %/rpm</string>
    <string name="mhz">mHz</string>
    <string name="mv_cur_set">mV cur/set</string>
    <string name="uptime">UpTime:</string>
    <string name="core_voltage">Core Voltage</string>
    <string name="display_timeout_1_always_on_0_off">Display Timeout (-1 always on, 0 off)</string>
    <string name="asic_target_temperatur">Asic Target Temperatur:</string>
    <string name="manual_fan_speed">Manual Fan Speed %:</string>
    <string name="save">Save</string>
    <string name="restart">Restart</string>
    <string name="stratum_host">Stratum Host:</string>
    <string name="stratum_port">Stratum Port:</string>
    <string name="stratum_user">Stratum User:</string>
    <string name="stratum_password">Stratum Password:</string>
    <string name="fallback_stratum_host">Fallback Stratum Host:</string>
    <string name="fallbackstratum_port">FallbackStratum Port:</string>
    <string name="fallback_stratum_user">Fallback Stratum User:</string>
    <string name="fallback_stratum_password">Fallback Stratum Password:</string>
    <string name="scan_network">Scan Network</string>
    <string name="download">Download</string>
    <string name="close">Close</string>
    <string name="update_available">Update Available</string>
    <string name="add_new_pool">Add New Pool</string>
    <string name="apply_pools_to_miners">Apply Pools to Miners</string>
    <string name="main_pool">Main Pool</string>
    <string name="fallback_pool">Fallback Pool</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flash">Flash</string>
    <string name="apply_pools_to_devices">Apply Pools To Devices</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="edit">Edit</string>
    <string name="add_new">Add New</string>
    <string name="check_releases">Check Releases</string>
</resources>